# BetterBellman

./: Cargo.toml  README.md
bellman/: Cargo.toml
bellman/src/: arith.rs  constraint.rs  domain.rs  error.rs  fft.rs  lib.rs  linear.rs  multicore.rs  multiexp.rs  namespace.rs
bellman/src/domain/: fft.rs  linear.rs  mod.rs  multiexp.rs
bellman/src/domain/multiexp/: density.rs  inner.rs  mod.rs  region.rs  settings.rs  source.rs
bellman/src/domain/primitives/: group.rs  mod.rs
bellman/src/gadgets/: boolean.rs  lookup.rs  mod.rs  multieq.rs  multipack.rs  num.rs
bellman/src/gadgets/test/: mod.rs
bellman/src/groth16/: generator.rs  mod.rs  prover.rs  verifier.rs
bellman/src/groth16/generator/: assembly.rs  eval.rs  mod.rs
bellman/src/groth16/generator/assembly/: eval.rs  key_pair.rs  mod.rs  parameters.rs  windows.rs
bellman/src/groth16/generator/assembly/eval/: mod.rs  writer.rs
bellman/src/groth16/generator/assembly/key_pair/: mod.rs  wires.rs
bellman/src/groth16/generator/assembly/parameters/: elements.rs  mod.rs
bellman/src/groth16/prover/: mod.rs  system.rs
bellman/src/groth16/prover/system/: builder.rs  context.rs  fourier.rs  mod.rs  source.rs
bellman/src/groth16/prover/system/source/: mod.rs  source.rs
bellman/tests/: mimc.rs
zcash_primitives/src/: lib.rs  merkle_tree.rs  primitives.rs  prover.rs  sapling.rs  serialize.rs
zcash_primitives/src/transaction/: builder.rs
zcash_primitives/src/transaction/builder/: mod.rs  output.rs
zcash_proofs/src/: prover.rs
zcash_proofs/src/sapling/: mod.rs  prover.rs
