[package]
authors = ["Josh Fourie <josh@aequita.io>"]
description = "zk-SNARK library"
documentation = "https://github.com/JoshFourie/BetterBellman"
homepage = "https://github.com/JoshFourie/BetterBellman"
license = "MIT/Apache-2.0"
name = "better_bellman"
repository = "https://github.com/JoshFourie/BetterBellman"
version = "0.1.0"
edition = "2018"

[dependencies]
bit-vec = "0.4.4"
blake2s_simd = "0.5"
ff = { path = "../ff" }
futures = "0.1"
futures-cpupool = { version = "0.1", optional = true }
group = { path = "../group" }
num_cpus = { version = "1", optional = true }
crossbeam = { version = "0.3", optional = true }
pairing = { path = "../pairing", optional = true }
rand_core = "0.5"
byteorder = "1"
lazy_static = "1.4"

[dev-dependencies]
hex-literal = "0.1"
rand = "0.7"
rand_xorshift = "0.2"
sha2 = "0.8"

[features]
groth16 = ["pairing"]
multicore = ["futures-cpupool", "crossbeam", "num_cpus"]
default = ["groth16", "multicore"]

[[test]]
name = "mimc"
path = "tests/mimc.rs"
required-features = ["groth16"]
